# Embedded-Linux

./: C-C++_Compiling.md  Capslock.md  Cpp_Task2.md  CrossCompiler.md  Day(1).md  Day(2).md  Day(3).md  Day(7).md  README.md  SharedMemory.md  myWrite.md  threads.cpp
C/C/: C-C++_Compiling.md
Raspberry_GPIO/: GPIO.cpp  GPIO.h  Raspberry.cpp  VScode.md  a.out
Temperatore-Sensor/: README.md  SensorInterface.cpp  SensorSimulator.cpp
sevenSeg_Diamond/: CMakeLists.txt
sevenSeg_Diamond/app/: CMakeLists.txt  main.cpp
sevenSeg_Diamond/lib/: CMakeLists.txt
sevenSeg_Diamond/lib/include/: Terminal.hpp  sevenSegmentOutput.hpp
sevenSeg_Diamond/lib/include/interface/: iStream.hpp  oStream.hpp
sevenSeg_Diamond/lib/include/private/: Stream_Base.hpp
sevenSeg_Diamond/lib/src/: GPIO.cpp  Terminal.cpp  iStream.cpp  sevenSegmentOutput.cpp
vsomeip_capslock/: client  client.cpp  client.json  server  server.cpp  server.json
